sfdx/force-app/main/default/objects/Stripe_Coupon__c/fields/Percent_Off__c.field-meta.xml
<CustomField>
    <fullName>Percent_Off__c</fullName>
    <description>The percentage off that is taken off the subtotal for the duration of the coupon.</description>
    <label>Percent Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>