sfdx/force-app/main/default/objects/Stripe_Coupon__c/fields/Stripe_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_ID__c</fullName>
    <description>The unique identifier for the coupon in Stripe.</description>
    <externalId>true</externalId>
    <label>Stripe ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>